@@ -1,3 +1,4 @@
+Fixed: There seems to be a bug with the Track Friction still - if you turn it on, then off, the friction continues to affect the skater.
 Fixed: Latent (enabled) value for the friction slider should be set to halfway on reset
 Reduced snap distance to 1/3 of the previous value
 # 2.08.10 (59417) Dec 16, 2011
